<resources>
    <string name="app_name">HealthDiary</string>
    <string name="login">로그인</string>
    <string name="e_mail">이메일</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="birth_date">생년월일</string>
    <string name="phone_number">휴대전화 번호</string>
    <string name="certifi_number_input">인증번호 입력</string>
    <string name="certifi_number_transfer">인증번호 전송</string>


    <!--문장-->
    <string name="forget_id">아이디 찾기</string>
    <string name="forget_password">비밀번호 찾기</string>
    <string name="sing_up">회원가입</string>
</resources>